@@ -9,7 +9,7 @@
     {
       "type": "int",
       "name": "AmmoAlive",
-      "value": 200
+      "value": 600
     },
     {
       "type": "string",
@@ -45,9 +45,10 @@
         "SentryGunBullet01",
         "TargetMarkerBullet01",
         "SupportUnitBullet01",
-        "PileBunkerBullet01"
+        "PileBunkerBullet01",
+        "PlasmaBullet01"
       ],
-      "value": "RocketBullet01"
+      "value": "MissileBullet01"
     },
     {
       "type": "ptr",
@@ -56,44 +57,44 @@
         {
           "type": "float",
           "name": "Red",
-          "value": 200.75
+          "value": 3
         },
         {
           "type": "float",
           "name": "Green",
-          "value": 400.5
+          "value": 4
         },
         {
           "type": "float",
           "name": "Blue",
-          "value": 300.25
+          "value": 3
         },
         {
           "type": "float",
           "name": "Alpha",
-          "value": 1
+          "value": 0.25
         }
       ]
     },
     {
       "type": "int",
       "name": "AmmoCount",
-      "value": 2
+      "value": 15
     },
     {
       "type": "float",
       "name": "AmmoDamage",
-      "value": 5500
+      "value": 250
     },
     {
       "type": "float",
       "name": "AmmoExplosion",
-      "value": 30
+      "value": 2
     },
     {
       "type": "float",
       "name": "AmmoGravityFactor",
-      "value": 0
+      "value": 0.75
     },
     {
       "type": "float",
@@ -110,7 +111,15 @@
         },
         {
           "type": "string",
-          "value": "common_damages_explode_L"
+          "value": "common_damages_explode_X"
+        },
+        {
+          "type": "float",
+          "value": 0.7943000197410583
+        },
+        {
+          "type": "float",
+          "value": 1.243880033493042
         },
         {
           "type": "float",
@@ -118,15 +127,7 @@
         },
         {
           "type": "float",
-          "value": 1
-        },
-        {
-          "type": "float",
-          "value": 1
-        },
-        {
-          "type": "float",
-          "value": 280
+          "value": 200
         }
       ]
     },
@@ -141,24 +142,24 @@
       "value": 0
     },
     {
-      "type": "int",
+      "type": "string",
       "name": "AmmoModel",
-      "value": 0
+      "value": "app:/WEAPON/bullet_missile.rab"
     },
     {
       "type": "float",
       "name": "AmmoOwnerMove",
-      "value": 0
-    },
-    {
-      "type": "float",
-      "name": "AmmoSize",
       "value": 1
     },
     {
       "type": "float",
+      "name": "AmmoSize",
+      "value": 0.2
+    },
+    {
+      "type": "float",
       "name": "AmmoSpeed",
-      "value": 15
+      "value": 1
     },
     {
       "type": "ptr",
@@ -166,19 +167,107 @@
       "value": [
         {
           "type": "int",
-          "value": 40
+          "value": 1
         },
         {
           "type": "int",
-          "value": 100
+          "value": 1
         },
         {
           "type": "int",
-          "value": 200
+          "value": 300
+        },
+        {
+          "type": "ptr",
+          "value": [
+            {
+              "type": "float",
+              "value": 0
+            },
+            {
+              "type": "float",
+              "value": 0
+            },
+            {
+              "type": "float",
+              "value": -0.05000000074505806
+            }
+          ]
         },
         {
           "type": "float",
-          "value": 0.4
+          "value": 1
+        },
+        {
+          "type": "float",
+          "value": 0.20000000298023224
+        },
+        {
+          "type": "float",
+          "value": 2
+        },
+        {
+          "type": "ptr",
+          "value": [
+            {
+              "type": "int",
+              "value": 10
+            },
+            {
+              "type": "float",
+              "value": 0.9800000190734863
+            }
+          ]
+        },
+        {
+          "type": "int",
+          "value": 15
+        },
+        {
+          "type": "int",
+          "value": 0
+        },
+        {
+          "type": "ptr",
+          "value": [
+            {
+              "type": "float",
+              "value": 0.25
+            },
+            {
+              "type": "float",
+              "value": 0.25
+            }
+          ]
+        },
+        {
+          "type": "ptr",
+          "value": [
+            {
+              "type": "int",
+              "value": 0
+            },
+            {
+              "type": "string",
+              "value": "weapon_Ranger_ML_go_Medium"
+            },
+            {
+              "type": "float",
+              "value": 0.6309999823570251
+            },
+            {
+              "type": "float",
+              "value": 1.189210057258606
+            },
+            {
+              "type": "float",
+              "value": 1
+            },
+            {
+              "type": "float",
+              "value": 50
+            }
+          ]
         }
       ]
     },
@@ -190,7 +279,7 @@
     {
       "type": "float",
       "name": "AngleAdjust",
-      "value": 0
+      "value": -0.15000000596046448
     },
     {
       "type": "string",
@@ -210,17 +299,17 @@
     {
       "type": "float",
       "name": "FireAccuracy",
-      "value": 0.00800000037997961
+      "value": 0.10000000149011612
     },
     {
       "type": "int",
       "name": "FireBurstCount",
-      "value": 1
+      "value": 15
     },
     {
       "type": "int",
       "name": "FireBurstInterval",
-      "value": 0
+      "value": 6
     },
     {
       "type": "int",
@@ -230,12 +319,12 @@
     {
       "type": "int",
       "name": "FireCount",
-      "value": 1
+      "value": 4
     },
     {
       "type": "int",
       "name": "FireInterval",
-      "value": 120
+      "value": 6
     },
     {
       "type": "ptr",
@@ -245,7 +334,7 @@
     {
       "type": "float",
       "name": "FireRecoil",
-      "value": 0.8999999761581421
+      "value": 0.10000000149011612
     },
     {
       "type": "ptr",
@@ -258,15 +347,15 @@
         {
           "type": "string",
           "name": "SoundName",
-          "value": "weapon_Ranger_RL_goliathZ"
+          "value": "weapon_Ranger_ML_MLRATW"
         },
         {
           "type": "float",
-          "value": 0.8913000226020813
+          "value": 0.8500000238418579
         },
         {
           "type": "float",
-          "value": 0.943880021572113
+          "value": 1
         },
         {
           "type": "float",
@@ -281,12 +370,12 @@
     {
       "type": "int",
       "name": "FireSpreadType",
-      "value": 0
+      "value": 2
     },
     {
       "type": "float",
       "name": "FireSpreadWidth",
-      "value": 0
+      "value": 0.30000001192092896
     },
     {
       "type": "int",
@@ -308,7 +397,7 @@
         },
         {
           "type": "float",
-          "value": 0.30000001192092896
+          "value": 0.4000000059604645
         }
       ]
     },
@@ -320,12 +409,12 @@
     {
       "type": "int",
       "name": "LockonHoldTime",
-      "value": 0
+      "value": 600
     },
     {
       "type": "float",
       "name": "LockonRange",
-      "value": 0
+      "value": 300
     },
     {
       "type": "int",
@@ -335,12 +424,12 @@
     {
       "type": "int",
       "name": "LockonTime",
-      "value": 0
+      "value": 4
     },
     {
       "type": "int",
       "name": "LockonType",
-      "value": 0
+      "value": 1
     },
     {
       "type": "int",
@@ -370,68 +459,17 @@
     {
       "type": "string",
       "name": "MuzzleFlash",
-      "value": "MuzzleSmoke01"
+      "value": ""
     },
     {
       "type": "ptr",
       "name": "MuzzleFlash_CustomParameter",
-      "value": [
-        {
-          "type": "int",
-          "value": 1
-        },
-        {
-          "type": "float",
-          "value": 0.25
-        },
-        {
-          "type": "ptr",
-          "value": [
-            {
-              "type": "float",
-              "value": 1
-            },
-            {
-              "type": "float",
-              "value": 1
-            },
-            {
-              "type": "float",
-              "value": 1
-            },
-            {
-              "type": "float",
-              "value": 1
-            }
-          ]
-        },
-        {
-          "type": "float",
-          "value": 0.10000000149011612
-        },
-        {
-          "type": "ptr",
-          "value": [
-            {
-              "type": "float",
-              "value": 0
-            },
-            {
-              "type": "float",
-              "value": 0
-            },
-            {
-              "type": "float",
-              "value": -1.600000023841858
-            }
-          ]
-        }
-      ]
+      "value": null
     },
     {
       "type": "float",
       "name": "Range",
-      "value": 3000
+      "value": 45
     },
     {
       "type": "string",
@@ -446,7 +484,7 @@
     {
       "type": "int",
       "name": "ReloadTime",
-      "value": 300
+      "value": 60
     },
     {
       "type": "int",
@@ -454,20 +492,23 @@
       "value": 0
     },
     {
-      "type": "float",
+      "type": "ptr",
       "name": "SecondaryFire_Parameter",
-      "value": 7
+      "value": null
     },
     {
       "type": "int",
       "name": "SecondaryFire_Type",
-      "options": [
-        0,
-        1,
-        2,
-        3
-      ],
-      "value": 1
+      "options": {
+        "None": 0,
+        "Zoom": 1,
+        "Activate": 2,
+        "Activate and Reload": 3,
+        "Jumpjets (Fencer)": 4,
+        "Dash (Fencer)": 5,
+        "Shield Reflect (Fencer)": 6
+      },
+      "value": 0
     },
     {
       "type": "ptr",
@@ -498,36 +539,9 @@
       "value": null
     },
     {
-      "type": "ptr",
-      "name": "Sight_animation_model",
-      "value": [
-        {
-          "type": "ptr",
-          "value": [
-            {
-              "type": "string",
-              "value": "app:/HUD/sight02.rab"
-            },
-            {
-              "type": "string",
-              "value": "sight02.mdb"
-            }
-          ]
-        },
-        {
-          "type": "int",
-          "value": 0
-        },
-        {
-          "type": "int",
-          "value": 0
-        }
-      ]
-    },
-    {
       "type": "string",
       "name": "WeaponIcon",
-      "value": "app:/weapon/icon/stingray.dds"
+      "value": "app:/weapon/icon/FORK.dds"
     },
     {
       "type": "ptr",
@@ -538,23 +552,23 @@
           "value": [
             {
               "type": "string",
-              "value": "app:/Weapon/s_rocket_goliathZ.rab"
+              "value": "app:/Weapon/s_missile_verticalmissile01.rab"
             },
             {
               "type": "string",
-              "value": "s_rocket_goliathZ.mdb"
+              "value": "s_missile_verticalmissile01.mdb"
             }
           ]
         },
         {
-          "type": "int",
-          "value": 0
+          "type": "string",
+          "value": "app:/Weapon/s_missile_verticalmissile01.cas"
         },
         {
           "type": "extra",
           "value": {
             "type": "MAB\u0000",
-            "data": "TUFCAA8AAAADAAAAAwAAAAUAMAAkAAAAfAAAAIAAAADwAAAAAAABADwAAAABAAEAXAAAAAIAAAB8AAAA8AAAAPwAAAACAAAAkAAAAKAAAACAAAAAAAAAANAAAAD2AAAA/AAAAAIAAACwAAAAoAAAAMAAAAAAAAAA0AAAALq6uroAAAAAAAAAAAAAAAAAAIA/AAAAAIPASj6+n1o/AACAP83MzDzNzMw8zczMPAAAgD8lBgE+ppvEO/CnRj4AAIA/4UktvD39cb4vN0ZAAACAP1NHTwACAQAAAAAAACAAAAAAAAAAIAAAAAAAAAAgAAAAMAAxAAAASQBLAAAAcwBfAHIAbwBjAGsAZQB0AF8AZwBvAGwAaQBhAHQAaABaAAAA"
+            "data": "TUFCAA8AAAADAAAAAwAEAAoAeAAkAAAA/AAAAGABAAA8AwAAAAAFADwAAAABAAEA3AAAAAIAAAD8AAAAPAMAAGADAAACAAAAoAEAALABAADgAQAAAAAAACACAABCAwAAYAMAAAIAAACQAQAAsAEAAOABAAAAAAAAIAIAAEgDAABgAwAAAgAAAIABAACwAQAA4AEAAAAAAAAgAgAATgMAAGADAAACAAAAYAEAALABAADgAQAAAAAAACACAABUAwAAYAMAAAIAAABwAQAAsAEAAOABAAAAAAAAIAIAAFoDAABgAwAAAgAAANABAADAAQAA8AEAAAAAAAAAAgAAPAEAAFwBAACOAwAAAQAAAEwBAABcAQAAagMAAAEAAABcAQAAXAEAAJgDAAAAAAAAXAEAAFwBAAB2AwAAAAAAAK4DAAAAAAAAAAAAAIACAACuAwAAAAAAAAAAAADcAgAAurq6ugAAAAAX2Y4+pptEOwAAgD8AAAAAF9mOPiUGAT4AAIA/AAAAABfZjj5GtvO9AACAPwAAAAAX2Y4+tMh2vgAAgD8AAAAAF9mOPiPbub4AAIA/CtcjPQrXIz0K1yM9AACAP83MTD3NzEw9zcxMPQAAgD/VeOk9c2iRvQIrBz4AAIA/2w/JvwAAAAAAAAAAAACAP3330b8OJCrAjtufvgAAgD9TR08AAgEAAAAAAAAgAAAAAAAAACAAAAAAAAAAIAAAAFNHTwACAQAAAQAAACAAAAABAAAALAAAAAAAAAA0AAAAAQAAAAQAAAABAAAACAAAAAAAAABmAGkAcgBlAF8AbQBvAGQAZQBsAF8AZABpAHIAZQBjAHQAaQBvAG4AAAAAAFNHTwACAQAAAQAAACAAAAABAAAALAAAAAAAAAA0AAAAAwAAAA4AAAAeAAAACAAAAAAAAABuAGEAbQBlAAAALf8s/zb/Lf8p/zP/M/8p/yz/Jf8Q/xH/i5VPMAAAU0dPAAIBAAABAAAAIAAAAAEAAAAsAAAAAAAAADQAAAADAAAADwAAAB4AAAAIAAAAAAAAAG4AYQBtAGUAAAAt/yz/Nv8t/yn/M/8z/yn/LP8l/xD/Ef+JlVgwizAAAAAAMAAxAAAAMAAyAAAAMAAzAAAAMAA0AAAAMAA1AAAASQBLAAAAYgBvAGQAeQAAAGMAbABvAHMAZQAAAGMAbABvAHMAZQBfAHMAdABhAHQAZQAAAG8AcABlAG4AAABvAHAAZQBuAF8AcwB0AGEAdABlAAAAcwBlAAAA"
           }
         }
       ]
@@ -565,7 +579,7 @@
       "value": [
         {
           "type": "string",
-          "value": "shoulder_recoil2"
+          "value": "shoulder_recoil1"
         },
         {
           "type": "int",
@@ -588,17 +602,28 @@
         {
           "type": "string",
           "name": "Japanese",
-          "value": "Goliath ZD"
+          "value": "ＭＬＲＡ－X"
         },
         {
           "type": "string",
           "name": "English",
-          "value": "Goliath ZD"
+          "value": "MLRA-X"
         },
         {
           "type": "string",
           "name": "Chinese",
-          "value": "Goliath ZD"
+          "value": "ＭＬＲＡ－X"
+        }
+      ]
+    },
+    {
+      "type": "ptr",
+      "name": "resource",
+      "value": [
+        {
+          "type": "string",
+          "name": "path",
+          "value": "app:/WEAPON/bullet_missile.rab"
         }
       ]
     },
@@ -610,17 +635,17 @@
     {
       "type": "string",
       "name": "xgs_scene_object_class",
-      "value": "Weapon_BasicShoot"
+      "value": "Weapon_HomingShoot"
     }
   ],
   "meta": {
     "help": "For examples of these values, open WEAPONTABLE.SGO and WEAPONTEXT.SGO",
-    "id": "SuperGoliath",
-    "after": "Weapon079",
-    "level": 82,
-    "category": 3,
-    "unlockState": 1,
+    "id": "RmsMlraX",
+    "before": "Weapon112",
+    "level": 75,
+    "category": 4,
+    "unlockState": null,
     "dropRateModifier": null,
-    "description": "$AUTOSTATS$The ultimate upgrade to the Goliath line of rocket launcher, this latest variants has room for two shots. Damage and area of effect have been pushed to the limit."
+    "description": "$AUTOSTATS$The ultimate model in the MLRA line releases a locust of 4 missiles per lockon that will swarm upon your target."
   }
 }
