@@ -78,6 +78,7 @@ RANGER
   - Royal Flush | Sniper
   - Omega Laser Rifle | Sniper
   - Goliath ZD | Rocket Launcher
+  - MLRA-X | Missile Launcher
 
 WING DIVER
   - Electric Rapier | Short-Range
